# learning-rust

./: README.md
chapter-1/rustriz/: Cargo.toml
chapter-1/rustriz/src/: main.rs
chapter-2/chat/src/: main.rs
chapter-2/ownership/library_server/: Cargo.toml  main.py
chapter-2/ownership/library_server/src/server/: handlers.rs  mod.rs
chapter-2/ownership/wasm_server/: Cargo.toml  README.md
chapter-2/ownership/wasm_server/src/: main.rs
chapter-2/ownership/wasm_server/src/domain/: job.rs  mod.rs  wasm.rs
chapter-2/ownership/wasm_server/src/runner/: mod.rs
chapter-2/ownership/wasm_server/src/server/: handler.rs  mod.rs  request.rs  utils.rs
chapter-2/threads/native/: Cargo.toml
chapter-2/threads/native/src/: main.rs
chapter-2/threads/tokio/: Cargo.toml
chapter-2/threads/tokio/src/: main.rs
chapter-3/methods/exe-01/src/: main.rs
chapter-3/methods/exe-02/: Cargo.toml
chapter-3/methods/exe-02/src/: circle.rs  lib.rs  point.rs  polygon.rs  shape.rs
chapter-3/methods/exe-02/tests/: circle.rs  point_tests.rs  polygon_tests.rs  shape_test.rs
chapter-4/exe-01/: Cargo.toml
chapter-4/exe-01/src/: main.rs
chapter-4/exe-02/src/: main.rs
chapter-5/exe-01/src/: main.rs
chapter-5/playground/src/: main.rs
chapter-5/playground/src/default/: mod.rs
chapter-5/playground/src/droppable/: mod.rs
chapter-5/playground/src/fibonacci/: mod.rs
chapter-6/playground/: Cargo.toml
chapter-6/playground/src/: main.rs
first_step/rustriz/: README.md
playground/: Cargo.toml
playground/src/: main.rs
secund_step/chat/: Cargo.toml
secund_step/ownership/library_server/: README.md  pyproject.toml
secund_step/ownership/library_server/src/: main.rs
secund_step/ownership/library_server/src/book/: mod.rs
secund_step/ownership/library_server/src/runner/: mod.rs
secund_step/ownership/library_server/src/server/: handlers.rs
secund_step/ownership/wasm_server/: README.md  main.py
(+15 files in other folders)
