[package]
name = "library_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.153", features = ["derive"] }
hyper = { version = "0.14.24", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }
serde_json = "1.0.94"
lazy_static = "1.4.0"
futures = "0.3.26"
uuid = { version = "1.3.0", features = ["v4"] }
